# alphagenome-mcp

./: .env.template  .gitignore  README.md  env.example  mcp-config-server.json  mcp-config-stdio.json  mcp-config.json  pyproject.toml  pytest.ini  ruff.toml  test_output_README.md
.github/workflows/: ci.yml
docs/: common_usage.md
examples/: basic_usage.py  cli_example.py  mcp_client_example.md  vcf_example.py
src/alphagenome_mcp/: __init__.py  alphagenome-mcp.code-workspace  cli.py  core.py  server.py  vcf_processor.py
tests/: __init__.py  test_server.py
